Fix scale on mobile

--- a/index.css
+++ b/index.css
@@ -60,13 +60,13 @@ h1 {
 
 button {
   display: inline-block;
+  font-family: 'Sriracha', cursive;
   border: none;
   padding: 1rem 2rem;
   margin: 0;
   text-decoration: none;
   background: saddlebrown;
   color: #ffffff;
-  font-family: sans-serif;
   font-size: 1rem;
   cursor: pointer;
   text-align: center;
@@ -79,13 +79,15 @@ button {
 button:hover,
 button:focus {
   background: darkred;
+  transform: scale(1.1);
 }
 
 button:focus {
   outline: 1px solid #fff;
   outline-offset: -4px;
+  transform: scale(1);
 }
 
 button:active {
-  transform: scale(0.99);
+  transform: scale(0.5);
 }
